// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should have some hintText 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        id="id"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="base textAlign_left root_base sizes_2_base fontWeight_normal_base base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<TextInput /> should match snapshot 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        id="id"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when active 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        type="text"
        value="value from the tests"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="placeholder_default_standard_base activeColour_base placeholderPlacement_shifted_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched and valid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot with both icons 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <i
        class="base display_block medium_mobile_base iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <i
        class="base display_block medium_mobile_base iconRoot_base icon_suffix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base input_itself_prefixed_base input_itself_suffixed_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot with prefix icon 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <i
        class="base display_block medium_mobile_base iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base input_itself_prefixed_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot with suffix icon 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <i
        class="base display_block medium_mobile_base iconRoot_base icon_suffix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="base block appearance input base block appearance input width_full input_itself_root_base input_itself_suffixed_base"
        type="text"
        value=""
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
